Refined CSS styles for mobile responsiveness across multiple files. Updated media740.css to adjust margin for works-dots and commented out overflow-x in the container. Enhanced media1300.css with a new media query for works-dots margin. Modified style.css to include padding adjustments and fixed margin issues in the header for better layout consistency.

--- a/freelance/wedding/media1300.css
+++ b/freelance/wedding/media1300.css
@@ -306,3 +306,13 @@
         height: 39px;
     }
 }
+
+@media (max-width: 1100px) {
+    .works-dots {
+        margin-left: 0%;
+    }
+}
+
+@media (max-width: 900px) {
+    
+}
